Archive2/91/ba908864cd8f41/output
main.c:15:16: warning: too many arguments in call to 'func'
  a = func(a, a); /* A */
      ~~~~     ^
main.c:16:13: error: too many arguments to function call, expected 0, have 1
  a = func2(a);   /* B */
      ~~~~~ ^
main.c:6:1: note: 'func2' declared here
int func2(void)
^
1 warning and 1 error generated.
