Archive2/91/ba908864cd8f41/main.cpp
int func()
{
  return 0;
}

int func2(void)
{
  return 1;
}

int main(void)
{
  int a;

  a = func(a, a); /* A */
  a = func2(a);   /* B */

  return 0;
}